--- a/.github/workflows/catalg-service.yaml
+++ b/.github/workflows/catalg-service.yaml
@@ -34,3 +34,16 @@ jobs:
 
       - name: Build with Maven
         run: ./mvnw -ntp verify
+
+      - if: ${{github.ref=='ref/heads/main'}}
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      - if: ${{github.ref=='ref/heads/main'}}
+        name: Build and Publish Docker Image
+        run: |
+          ./mvnw spring-boot:build-image -DskipTests 
+           docker push ${{DOCKER_HUB_USER}}/bookstore-catalog-service
+
