--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<dockerImageName>hanyeltohamy/bookstore-${project.artifactId}</dockerImageName>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -122,6 +123,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>${dockerImageName}</name>
+					</image>
+					<docker>
+						<host>npipe:////./pipe/docker_engine</host>
+					</docker>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -136,6 +145,7 @@
 						</configuration>
 					</execution>
 				</executions>
+
 			</plugin>
 			<plugin>
 				<groupId>io.github.git-commit-id</groupId>
