--- a/.github/workflows/catalg-service.yaml
+++ b/.github/workflows/catalg-service.yaml
@@ -19,6 +19,7 @@ jobs:
     defaults:
       run:
         working-directory: ${{ env.working-directory }}
+
     steps:
       - uses: actions/checkout@v5
 
@@ -33,17 +34,17 @@ jobs:
         run: chmod +x mvnw
 
       - name: Build with Maven
-        run: ./mvnw -ntp verify
+        run: ./mvnw clean verify -ntp
 
-      - if: ${{github.ref=='ref/heads/main'}}
+      - if: ${{ github.ref == 'refs/heads/main' }}
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      - if: ${{github.ref=='ref/heads/main'}}
+
+      - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
         run: |
-          ./mvnw spring-boot:build-image -DskipTests 
-           docker push ${{DOCKER_HUB_USER}}/bookstore-catalog-service
-
+          ./mvnw spring-boot:build-image -DskipTests
+          docker push ${{ secrets.DOCKER_HUB_USER }}/bookstore-catalog-service:latest
