order-service implementation

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
     <modules>
         <module>catalog-service</module>
+        <module>order-service</module>
     </modules>
     <build>
         <plugins>
