--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>catalog-service</module>
         <module>order-service</module>
+        <module>notification-service</module>
     </modules>
     <build>
         <plugins>
