--- a/deployment/docker-compose/apps.yaml
+++ b/deployment/docker-compose/apps.yaml
@@ -24,7 +24,7 @@ services:
     container_name: order-service
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - ORDERS_CATALOG_SERVICE_URL=http://api-gateway:8989/catalog
+      - ORDERS_CATALOG_SERVICE_URL=http://catalog-service:8081
       - DB_URL=jdbc:postgresql://orders-db:5432/postgres
       - DB_USERNAME=postgres
       - DB_PASSWORD=postgres
@@ -32,10 +32,6 @@ services:
       - RABBITMQ_PORT=5672
       - RABBITMQ_USERNAME=guest
       - RABBITMQ_PASSWORD=guest
-      - OAUTH2_SERVER_URL=http://keycloak:9191
-      - SWAGGER_API_GATEWAY_URL=http://api-gateway:8989/orders
-      - MANAGEMENT_TRACING_ENABLED=${MANAGEMENT_TRACING_ENABLED}
-      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://tempo:9411
     ports:
       - "8082:8082"
     restart: unless-stopped
@@ -62,10 +58,6 @@ services:
       - RABBITMQ_PORT=5672
       - RABBITMQ_USERNAME=guest
       - RABBITMQ_PASSWORD=guest
-      - OAUTH2_SERVER_URL=http://keycloak:9191
-      - SWAGGER_API_GATEWAY_URL=http://api-gateway:8989/orders
-      - MANAGEMENT_TRACING_ENABLED=${MANAGEMENT_TRACING_ENABLED}
-      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://tempo:9411
       - MAIL_HOST=mailhog
       - MAIL_PORT=1025
     ports:
