--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>catalog-service</module>
         <module>order-service</module>
         <module>notification-service</module>
+        <module>api-gateway</module>
+        <module>webapp</module>
     </modules>
     <build>
         <plugins>
