--- a/.github/workflows/bookstore-webapp.yml
+++ b/.github/workflows/bookstore-webapp.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           ./mvnw spring-boot:build-image -DskipTests
           echo "Pushing the image $DOCKER_IMAGE_NAME to Docker Hub..."
-          docker push  ${{ secrets.DOCKER_HUB_USER }}/bookstore-webapp-service:latest
+          docker push  ${{ secrets.DOCKER_HUB_USER }}/bookstore-webapp:latest
